--- a/src/styles/.var.scss
+++ b/src/styles/.var.scss
@@ -1,9 +1,7 @@
-@import 'mixin';
-
 $app-padding: 20px;
 $container-max-width: 600px;
-$color-a: #0a0908;
-$color-b: #49111c;
+$color-a: #0a0908;//#0a0908;
+$color-b: #49111c;//#49111c
 $color-c: #f2f4f3;
 $color-d: #a9927d;
 $color-e: #5e503f;
