--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import "app-bar.scss";
 @import "navigation-drawer.scss";
 @import "home.scss";
+@import "turmas.scss";
 
 body {
   background-color: $color-c;
@@ -10,6 +11,50 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   color: $color-a;
+}
+
+.list {
+  margin: 40px 0;
+
+  &__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    background-color: #fff;
+    padding: 10px 12px;
+    border-radius: 2px;
+    @include box-shadow(1);
+  
+    &__text {
+      flex: 1;
+    }
+  
+    &__input {
+      flex: 1;
+      border-top: 0;
+      border-right: 0;
+      border-left: 0;
+      border-bottom: 1px solid #c7c7c7;
+    }
+  
+    &__button {
+      background-color: transparent;
+      border: 0;
+      cursor: pointer;
+  
+      &--hidden {
+        visibility: hidden;
+      }
+  
+      &--red {
+        color: $color-danger;
+      }
+  
+      &--green {
+        color: $color-success;
+      }
+    }
+  }
 }
 
 
