--- a/src/styles/.index.scss
+++ b/src/styles/.index.scss
@@ -37,6 +37,7 @@ body {
       border-top: 0;
       border-right: 0;
       border-left: 0;
+      font-size: 16px;
       border-bottom: 1px solid #c7c7c7;
     }
 
