--- a/src/styles/.index.scss
+++ b/src/styles/.index.scss
@@ -16,6 +16,22 @@ body {
   color: $color-a;
 }
 
+.new-item {
+  background-color: #fff;
+  padding: 10px 12px;
+  border-radius: 2px;
+  @include box-shadow(1);
+
+  &__input {
+    width: 100%;
+    border: none;
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
 .list {
   margin: 40px 0;
 
